Instruction "morse": fixed concurrency issues

--- a/nesc/agilla/Makefile
+++ b/nesc/agilla/Makefile
@@ -5,8 +5,8 @@ include ./Makefile.Agilla
 CFLAGS+=-DOPBATTERY 
 CFLAGS+=-DENABLE_MDA100=1
 CFLAGS+=-DOPCLEARTS
-#CFLAGS+=-DOPMORSE
-#CFLAGS+=-DMORSE_LED_TEST
+CFLAGS+=-DOPMORSE
+CFLAGS+=-DMORSE_LED_TEST
 
 PFLAGS+=$(PFLAGS_AGILLA)\
        -I components/ContextDiscovery \
