Fix to tuplespace reset and added support to 'id' string recognition in morse instruction

--- a/nesc/agilla/Makefile
+++ b/nesc/agilla/Makefile
@@ -7,6 +7,7 @@ CFLAGS+=-DENABLE_MDA100=1
 CFLAGS+=-DOPCLEARTS
 CFLAGS+=-DOPMORSE
 CFLAGS+=-DMORSE_LED_TEST
+CFLAGS+=-DMORSE_ID_CHECK
 
 PFLAGS+=$(PFLAGS_AGILLA)\
        -I components/ContextDiscovery \
