Alpha version of the new 'checkvoice' instruction

--- a/nesc/agilla/Makefile
+++ b/nesc/agilla/Makefile
@@ -1,13 +1,28 @@
 COMPONENT=Agilla
 include ./Makefile.Agilla
 
-#CFLAGS+=-DEDIT_TIMESTAMP 
+# De-comment to enable instruction timing debug mode
+#CFLAGS+=-DEDIT_TIMESTAMP
+
+# De-comment to enable "battery" instruction
 CFLAGS+=-DOPBATTERY 
-CFLAGS+=-DENABLE_MDA100=1
+
+# De-comment to enable "clearts" instruction
 CFLAGS+=-DOPCLEARTS
-CFLAGS+=-DOPMORSE
-CFLAGS+=-DMORSE_LED_TEST
-CFLAGS+=-DMORSE_ID_CHECK
+
+# De-comment to enable "checkvoice" instruction
+CFLAGS+=-DCHECKVOICE
+
+# Enable correct sensorboard
+#CFLAGS+=-DENABLE_MDA100=1
+CFLAGS+=-DENABLE_MTS310=1
+
+# De-comment to enable "morse" instruction and on-mote morse led test
+#CFLAGS+=-DOPMORSE
+#CFLAGS+=-DMORSE_LED_TEST
+
+# de-comment to enable 'id' parsing in morse instruction
+#CFLAGS+=-DMORSE_ID_CHECK
 
 PFLAGS+=$(PFLAGS_AGILLA)\
        -I components/ContextDiscovery \
@@ -27,12 +42,15 @@ PFLAGS+=$(PFLAGS_AGILLA)\
 
 #2014-09-08 -- Path for MDA100 code -- WT
 ifeq ($(findstring ENABLE_MDA100, $(CFLAGS)), ENABLE_MDA100)
+   SENSORBOARD=mda100
    PFLAGS+=-I $(TOSROOT)/tos/sensorboards/mda100 \
 			-I $(TOSROOT)/tos/sensorboards/mda100/cb
 endif
 
 #2014-09-08 -- Path for MTS310 code -- WT
 ifeq ($(findstring ENABLE_MTS310, $(CFLAGS)), ENABLE_MTS310)
+   SENSORBOARD=mts310
+   CFLAGS+=-DMTS310CA
    PFLAGS+=-I $(TOSROOT)/tos/sensorboards/mts300
 endif
 
